...
            "state" : "translated",
            "value" : "所有裝置都會登出，包含目前裝置。此操作需要網路連線及身分確認。"
          }
        }
      }
    },
    "account.design.appearance" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "المظهر"
...
            "state" : "translated",
            "value" : "設定帳號密碼"
          }
        }
      }
    },
    "account.design.settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "إعدادات التطبيق"
...
            "state" : "translated",
            "value" : "已置頂"
          }
        }
      }
    },
    "chat.details.search" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "البحث في سجل المحادثة"
...
            "state" : "translated",
            "value" : "傳送中"
          }
        }
      }
    },
    "chat.live.sendMessage" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "إرسال رسالة"
...
            "state" : "translated",
            "value" : "關係已更新，輸入已保留。請確認目前狀態後再次操作。"
          }
        }
      }
    },
    "contacts.remark" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تعديل اسم جهة الاتصال"
...
